--- a/SmileBoyClient/Styles.xaml
+++ b/SmileBoyClient/Styles.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:SmileBoyClient"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-                    >
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:Microsoft_Windows_Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Royale">
     <ResourceDictionary.MergedDictionaries>
         <!--MaterialDesignThemes-->
         <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
@@ -22,7 +21,7 @@
     </Style>
         
     <!--LoginPage & MainPage !-->
-
+    
     <Style x:Key="Font_styleRegular" TargetType="TextBlock">
         <Setter Property="FontFamily"
                     Value="/Fonts/Montserrat-Regular.ttf #Montserrat"/>
@@ -129,19 +128,30 @@
     </Style>
     
     <!--Tables-->
+
     <Style x:Key="DisableHover" TargetType="ListViewItem" BasedOn="{StaticResource MaterialDesignGridViewItem}">
+        <Setter Property="Focusable" Value="false"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                    <Border Name="Border" Background="{TemplateBinding Background}" BorderBrush="Transparent" BorderThickness="0" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                        <GridViewRowPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Height" Value="49"/>
+        <Setter Property="Width" Value="875"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="Height" Value="50"/>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" 
                      Value="True">
-                <Setter Property="Background" 
-                        Value="White" />
-                <Setter Property="BorderBrush" 
-                        Value="White" />
-            </Trigger>
-            <Trigger Property="IsSelected" 
-                     Value="True">
+                <Setter Property="BitmapEffect">
+                    <Setter.Value>
+                        <DropShadowBitmapEffect ShadowDepth="2" Opacity="0.3" Color="LightGray" />
+                    </Setter.Value>
+                </Setter>
                 <Setter Property="Background" 
                         Value="White" />
                 <Setter Property="BorderBrush" 
@@ -150,10 +160,22 @@
         </Style.Triggers>
     </Style>
 
+    <!--BUTTON-->
+    <Style x:Key="ButtonHover" TargetType="Button" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" 
+                     Value="True">
+                <Setter Property="BitmapEffect">
+                    <Setter.Value>
+                        <DropShadowBitmapEffect ShadowDepth="4" Opacity="0.3" Color="#E85270" />
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
     <Style x:Key="PText" TargetType="TextBlock">
         <Setter Property="FontSize" Value="12"></Setter>
         <Setter Property="FontWeight" Value="Regular"></Setter>
     </Style>
-    
-    
 </ResourceDictionary>
