--- a/SmileBoyClient/Views/Dialogs/AddDialog.xaml
+++ b/SmileBoyClient/Views/Dialogs/AddDialog.xaml
@@ -4,16 +4,20 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SmileBoyClient.Views.Dialogs"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              mc:Ignorable="d" 
              d:DesignWidth="300">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
-
+        
+        <TextBlock Grid.Row="2" Text="ADD PRODUCT" Foreground="#2d2d2d" VerticalAlignment="Center" FontSize="18" HorizontalAlignment="Center" FontFamily="{StaticResource MontserratBold}"></TextBlock>
         <Button Command="{x:Static wpf:DialogHost.CloseDialogCommand}"
                         Margin="0 0 5 0"
                         HorizontalAlignment="Right"
@@ -25,7 +29,7 @@
                           Width="15"/>
         </Button>
 
-        <StackPanel Grid.Row="1" Margin="25 10">
+        <StackPanel Grid.Row="3" Margin="25 10">
             <ItemsControl ItemsSource="{Binding SomeCollection}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
@@ -45,15 +49,17 @@
 
         <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Center"
-                    Grid.Row="3">
-            <Button IsDefault="True"
-                    Width="auto"
-                    Foreground="#7D9AFF"
-                    Style="{DynamicResource MaterialDesignFlatButton}"
-                    Command="{Binding AddCommand}">
-                ACCEPT
-            </Button>
-
+                    Grid.Row="5">
+            <Button Style="{StaticResource ButtonHover}"
+                                Command="{Binding AddCommand}"
+                                materialDesign:ButtonAssist.CornerRadius="0"
+                                Width="140" Height="40"
+                                Background="#E85275"
+                                Foreground="White"
+                                BorderBrush="Transparent"
+                                IsDefault="True"
+                                materialDesign:ShadowAssist.Darken="False"
+                                Content="Accept"></Button>
         </StackPanel>
     </Grid>
 </UserControl>
